--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.9.0",
+    "lucide-react": "^0.525.0",
     "next": "15.3.2",
     "platform": "file:",
     "react": "^19.0.0",
