--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "15.3.2",
     "platform": "file:",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
